fixed footer position on small pages

--- a/src/scss/theme/general.scss
+++ b/src/scss/theme/general.scss
@@ -9,8 +9,8 @@ html {
 }
 
 body {
-    height: 100%;
-    max-height: 100%;
+    //height: 100%;
+    //max-height: 100%;
     font-family: "Courier New", Courier, monospace;
     font-size: 2.0rem;
     line-height: 1.6em;
@@ -22,6 +22,10 @@ body {
     color: $selection-text-and-header-background;
     background: $selection-background-and-link-hover;
     text-shadow: none;
+}
+
+.content {
+    min-height: calc(100vh - 95px - 150px);
 }
 
 %heading {
