--- a/src/scss/theme/media.scss
+++ b/src/scss/theme/media.scss
@@ -37,7 +37,7 @@
     }
 
     .post-template .post-header {
-        padding: 40px 0;
+        padding: 80px 0;
     }
     .post-header #blog-logo:before {
         margin: 40px auto
@@ -126,7 +126,7 @@
     }
 
     .post-template .post-header {
-        padding: 30px 0;
+        padding: 80px 0;
     }
     .post-header #blog-logo:before {
         margin: 30px auto
